# arche_ecs

./: CMakeLists.txt  README.md  TODO.txt  build.bat  build_codegen.bat  main.cpp  math_helper.h  timer.h
benchmarks/: cold_cache.csv  entity_creation.csv  hot_cache.csv  old_entity_creation.csv  warm_cache.csv  warmer_cache.csv
benchmarks/scripts/: benchmark.py  build_plot.py
codegen/: CMakeLists.txt  main.cpp
include/ecs/: any.h  archetype.h  archetype_chunk_size.h  builtin_events.h  codegen_attributes.h  codegen_helpers.h  collumn.h  component_declaration.h  component_init.h  config.h  ecs.h  ecs_manager.h  entity_container.h  entity_id.h  event.h  fnv_hash.h  iteration_helpers.h  logger.h  query.h  query_iteration.h  singleton_component.h  teamplate.h  template.h  tiny_string.h  type_declaration.h  type_declaration_helper.h
perf/: N=1000.txt  N=10000.txt  N=100000.txt
sources/ecs/: CMakeLists.txt  archetype.cpp  ecs.cpp  ecs_manager.cpp  logger.cpp  query.cpp  systems.inl  systems.inl.cpp
sources/tests/: CMakeLists.txt  logger.h  math_helper.h  timer.h
sources/tests/benchmark/: main.inl  main.inl.cpp
sources/tests/benchmark_creation/: main.inl  main.inl.cpp
sources/tests/unit_tests/: main.inl  main.inl.cpp
